--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install -r requirements.txt
 #Commands to run test
 script:
-  - python -m unitest discover -s Tests
+  - python -m unittest discover -s Tests
 branches:
   only:
     - master
