--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ python:
   - "3.7"
 install:
   - pip install -r requirements.txt
-#Commands to run test
+# command to run tests
 script:
-  - python -m unittest discover -s Tests
+  - python -m  unittest discover -s  Tests
+
 branches:
   only:
     - master
